# pydanticai_examples

./: .editorconfig  .env.template  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
notebooks/: multitool_example.ipynb  observability_example.ipynb  rag_example.ipynb
src/pydanticai_examples/: config.py  todoist.py  utils.py  vector_store.py
